--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -1,13 +1,22 @@
-body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+@import './reset.css';
+@import './variables.scss';
+@import 'https://fonts.googleapis.com/css2?family=Sora:wght@400;500&family=Source+Code+Pro:wght@500;600&family=Space+Grotesk&family=Yantramanav:wght@100;300;700&display=swap';
+
+$font-path: '../../fonts/Gotham' !default;
+
+@font-face {
+	src: url('../../fonts/Gotham/Gotham-Bold.otf');
+	font-family: 'GothamBold';
+	font-weight: 350;
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-		monospace;
+body {
+	margin: 0;
+	font-family: 'Sora', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: $bg1;
+	color: $white;
+	line-height: normal;
+	
 }
